# pipes-telnet

./: .gitignore  README.md  default.nix  pipes-telnet.cabal  stack.yaml
example/: Main.hs
src/Pipes/Network/Client/: Telnet.hs
