name:                pipes-telnet
version:             0.0.1.0
description:         A programmable telnet client built with pipes and attoparsec
homepage:            https://github.com/alasconnect/pipes-telnet#readme
license:             BSD3
license-file:        LICENSE
author:              Brian Jones
maintainer:          bcj@alasconnect.com
copyright:           AlasConnect
category:            Network
stability:           Experimental
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Pipes.Network.Client.Telnet
  build-depends:       attoparsec >= 0.13
                     , base >= 4.7 && < 5
                     , bytestring >= 0.10
                     , network-simple >= 0.4
                     , pipes >= 4.3
                     , pipes-attoparsec >= 0.5
                     , pipes-bytestring >= 2.1
                     , pipes-network >= 0.6
                     , pipes-parse >= 3.0
                     , pipes-safe >= 2.2
                     , transformers >= 0.5
  default-language:    Haskell2010

executable pipes-telnet-example
  hs-source-dirs:      example
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , pipes-telnet
                     , attoparsec >= 0.13
                     , bytestring >= 0.10
  default-language:    Haskell2010

test-suite pipes-telnet-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , pipes-telnet
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/alasconnect/pipes-telnet